# PicoFlight

./: .gitmodules  CMakeLists.txt  PicoFlight.cpp  bck.txt  hw_config.c
modules/bmp280/: CMakeLists.txt
modules/bmp280/src/: bmp2080.cpp
modules/flash_spi/: CMakeLists.txt
modules/flash_spi/include/: flash_spi.h
modules/flash_spi/src/: flash_spi.c  flash_spi.cpp  flash_spi.h
modules/flight_data/: CMakeLists.txt
modules/flight_data/include/: flight_data.h
modules/flight_data/src/: flight_data.cpp  hw_config.c
modules/mpu6050/: CMakeLists.txt
modules/mpu6050/include/: mpu6050.h
modules/mpu6050/src/: mpu6050.cpp
